--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -23,38 +23,35 @@ Years and sample size of LFS harmonized for GLD are:
 | [1999](utilities/ETH_1999_LFS_report.pdf)  | 81,339        | 366,274      |  54,430,917  |   81,473   | 54,453,238|
 | [2005](utilities/Labour_force_survey_Final_Report_2005.pdf)  | 54,443        | 230,680      |  63,228,599  |   54,484   | 63,228,600|
 | [2013](utilities/nlfs_analytical_report labor_force_2013.pdf)  | 58,321        | 240,660      |  80,444,148  |   58,396   | 80,444,148|
-| [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_202_ LMS_(003).docx)  | 43,329        | 174,613      |  98,035,894 |    49,916   | 98,038,146|
+| [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_2021_LMS.docx)  | 43,329        | 174,613      |  98,035,894 |    49,916   | 98,038,146|
 
 All the four years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
 
-Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We commonly created HH identifiers using seven original variables: region, zone, wereda, town, kefetegna, Kebele, and enumeration area serial number according to their processing methodology. Even though the HH sample sizes do not match the reported size, the expanded population are quite close to their official estimates.     
+Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We commonly created HH identifiers using seven original variables: region, zone, wereda, town, kefetegna, Kebele, and enumeration area serial number according to their processing methodology. Even though the HH sample sizes do not match the reported size, the expanded population are quite close to their official estimates. It might be the case that the CSA has adjusted the weights in the raw datasets so as to match the population estimates.      
+
 
 ## Where can the data be found?
 
-The microdata of LFS from 2009 are publicly available on the official website of PBS through this [link](https://www.pbs.gov.pk/content/microdata). And accordingly, each year's report of 2007 to 2020 can be found through the [link here](https://www.pbs.gov.pk/content/all-reports-and-publications). Data prior to 2009 was shared internally with the World Bank.
+The microdata of ETH LFS are unfortunately not publicly available. All data are World Bank internal use only. 
 
 
 ## What is the sampling procedure?
 
-LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at rural/urban level of the province.
+The sampling procedure is a mixture of two-stage cluster and three-stage cluster sample design. Firstly, the whole country is divided into three broad categories: *rural*, *major urban centers*, and *other urban centers*. For category 1-rural and category 2-major urban areas, a stratified two-stage cluster sample design was used, which selects primary sampling units (PSU: enumeration areas) and secondary sampling units (SSU: households). But for other urban centers, a stratified three-stage cluster sample design was adopted. The PSUs are urban centers follwed by enumeration areas (EA) as SSUs and last but not least, households. For all four years. ETH LFS are representative at urban/rural parts of region level. 
 
-More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2020](https://www.pbs.gov.pk/sites/default/files/labour_force/publications/lfs2020_21/LFS_2020-21_Report.pdf) (page 19/20 of the PDF):
+More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2013](utilities/nlfs_analytical_report labor_force_2013.pdf) (page 19/20 of the PDF):
 
 ```
-Universe: The universe for Labour Force Survey consists of all urban and rural areas of the four provinces of Pakistan and Islamabad excluding military restricted areas. The population of excluded areas constitutes about 1% of the total population.
+For the purpose of the survey the country was divided into three broad categories. That is; rural, major urban center and other urban center categories.
+Category I: Rural: - This category consists of the rural areas of nine regions and one rural part of city administration found in the country. Regarding the survey domains, each region or city administration was considered to be a domain (Reporting Level) for which major findings of the survey are reported. This category totally comprises 10 reporting levels. A stratified two-stage cluster sample design was used to select samples in which the primary sampling units (PSUs) were EAs. Households per sample EA were selected as a second Stage Sampling Unit (SSSU) and the survey questionnaire finally administered to all members of sample households.
 
-A stratified two-stage sample design is adopted for the survey.
+Category II:- Major urban centers:- In this category all regional capitals and 15 other major urban centers that had a population size of 100,000 or more in 2007 were included. Each urban center in this category was considered as a reporting level.
 
-Pakistan Bureau of Statistics (PBS) has developed its own sampling frame for both urban and rural domains. Each city/town is divided into enumeration blocks. Each enumeration block is comprised of 200 to 250 households on the average with well-defined boundaries and maps. The frame used in this survey was the most recent frame which is updated through Population and Housing Census 2017.
+This category has totally 26 reporting levels. In this category too, in order to select the samples, a stratified two-stage cluster sample design was implemented. The primary sampling units were EAs. Households from each sample EA were then selected as a Second Stage Unit.
 
-Rural Domain: Each administrative district in the Punjab, Sindh and Khyber Pakhtunkhawa (KP) is considered an independent stratum whereas in Balochistan, each administrative division constitutes a stratum.
-Urban Domain: All administrative divisions in the four provinces, constitutes separate stratum.
+Category III: - Other urban centers: Urban centers in the country other than those under category II were grouped into this category. Harari, Addis Ababa and Dire Dawa do not have urban centers other than that grouped in category II. Hence, no domain was formed for these regions under this category.
 
-Selection of primary sampling units (PSUs)
-Enumeration blocks in both Urban and Rural domains are taken as Primary Sampling Units (PSUs). Sample PSUs from each ultimate stratum/sub-stratum are selected with probability proportional to size (PPS) method of sampling scheme. In both Urban and Rural domains, the number of households in an enumeration blocks considered as measure of size.
-
-Selection of secondary sampling units (SSUs)
-The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs). A specified number of households i.e. 12 from each urban sample PSU and 16 from rural sample PSU are selected with equal probability using systematic sampling technique with a random start.
+Unlike the above two categories a stratified three stage cluster sample design was adopted to select samples from this category. The primary sampling units were urban centers, the second stage sampling units were EAs and Households from each EA were finely selected at the third stage and the survey questionnaires administered for all of them.
 
 ```    
 
