--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -25,29 +25,24 @@ and other institutional households are not surveyed.
 4) Reference Period: The last one calendar week preceding the survey, from Monday to Sunday.
 5) Geographical Coverage: Survey conducted in all 11 marzes (provinces), covering both rural and urban settlements.
 
-
-
 GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their corresponding sample sizes of LFS harmonized are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| 
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| 
 | 2014 | 7,679         | 29,453      |  3,087,669  |   7,680   |
 | 2015 | 7,788         | 29,662      |  3,023,842  |   7,788   | 
-| 2016 | 7,788         | 28,516      |  2,895,298  |   25,750   | 
-| 2017 | 7,783         | 28,463      |  2,927,886  |   25,750   | 
-| 2018 | 7,788         | 28,296      |  2,908,921  |   25,750   |
-| 2019 | 7,768         | 27,854      |  2,839,777  |   25,750   | 
-| 2020 | 7,781         | 27,986      |  2,961,467  |   25,750   |
-| 2021 | 7,776         | 26,923      |  2,962,306  |   25,750   | 
-| 2022 | 7,760         | 27,218      |  2,969,037  |   25,750   | 
+| 2016 | 7,788         | 28,516      |  2,895,298  |   7,788   | 
+| 2017 | 7,783         | 28,463      |  2,927,886  |   7,788   | 
+| 2018 | 7,788         | 28,296      |  2,908,921  |   7,788   |
+| 2019 | 7,768         | 27,854      |  2,839,777  |   7,788   | 
+| 2020 | 7,781         | 27,986      |  2,961,467  |   7,788   |
+| 2021 | 7,776         | 26,923      |  2,962,306  |   7,788   | 
+| 2022 | 7,760         | 27,218      |  2,969,037  |   7,788   | 
 
-(<sup>*</sup>Note: The officially reported sample sizes are from methodology documentation of each year, which can be found from the [online publication library of NSS](https://armstat.am/en/?nid=82&year=2013).)  
+(*Note: The officially reported sample sizes are from methodology documentation of each year, which can be found from the [online publication library of NSS](https://armstat.am/en/?nid=82&year=2013).*)  
 
 ## Where can the data be found?
-
-Through free registration, the data is publicly available for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data set. Although Lanka Datta claims that with registration, LFS can be downloaded 100% of the original raw data set, trying to download each year's LFS confirms that only 25% of the original data set can be downloaded.   
-
-All annual reports are available on Lanka Datta and can be downloaded without any restrictions.
+All data is publicly available on the website of [Statistical Committee of the Republic of Armenia] ([http://nada.nso.gov.lk/index.php/home](https://armstat.am/en/?nid=212)). As mentioned above, each year's corresponding documentation on employment and other estimates can be downloaded without any restrictions from their oneline publication library.
 
 ## What is the sampling procedure?
 
