--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -46,11 +46,7 @@ All data is publicly available on the website of [Statistical Committee of the R
 
 ## What is the sampling procedure?
 
-The sampling procedure of LKA LFS is a stratified two-stage probability sample design, The primary sampling units (PSU) are census blocks; and the secondary sampling units are the housing units. Although the number of PSU selected per quarter varies through years (i.e. 252 PSUs per quarter in 1992 whereas 2,250 in 2007) depending on the Census of Population and Housing in past years, the survey usually select 10 housing units per PSU per quarter. 
-
-Since LKA LFS is a quarterly survey, it was conducted every three months and would take two months to conduct interviews and collect data. So most of the years, except those without complete four quarters, have 8 categories of "month of interview" variable in the raw dataset: two months for each quarter and four quarters in total. Month 1 and 2 would be coded as `wave 1`, for example.
-
-Four years out of the total 23 years do not cover all four quarters. Among the four years, 2011, 2012 and 2013 did not conduct the fourth quarter as the country's office of statistics was occupied with preparation for the population census. 2001 does not have the third quarter and the reason is not stated. 
+A two stage stratified sample by regions (marzes) has been designed to conduct the survey. The method of systematic probability sampling was used to frame the sample. Yerevan and all marzes with rural and urban settlements were covered by sample population with proportion of all households available in these strata. Based on the administrative and territorial division of ARM at the first stage of sampling, the preliminary sampling units, i.e. enumeration areas were selected. At the second stage of sampling, the PSU or households, were randomly selected.  
 
 ## What is the geographic significance level?
 
@@ -62,24 +58,7 @@ in extent and ten or more resident labourers. All areas other than urban and est
 
 ## Other noteworthy aspects  
 
-### Changes in survey structure 
-
-From 1992 to 2021, LKA LFS has gone through several major changes in terms of questionnaire structure, coding scheme and survey questions. These changes devide all surveys into 5 groups.
-
-**Years with two reference periods**:
-<br>
-<ins>1992-1995</ins> The initial questionnaire template. 
-<br>
-<ins>1996-2004</ins> Added more categories to the highest educational level attained such as each grade in primary and secondary education, which allows us to code `educat7`. In comparison, earlier years do not have `educat7` and `educat5` due to no distinction between "primary" and "primary unfinished". These years also added current schooling status.
-<br>
-
-**Years with one reference period**:
-<br>
-<ins>2006-2012</ins> Only has the past 7-day reference period. Added questions of literacy in terms of Sinhala, Tamil, and English. Training-related questions were expanded to include the name, field and duration of training. 
-<br>
-<ins>2013-2015</ins> Questionnaire in this stage is very similar to the last stage. Labor force participation age was changed from 10 to 15.The questionnaire was reformatted to partition questions for people with different labour status, i.e. question section only for employer or self-employed people. Questions concerning income were also rephrased to cater to different income units, i.e. daily wage earners and monthly salary earners. In addition, years starting with 2013 all use Sri Lanka Standard Classification of Occupation 2008 (SLSCO-08, corresponding to ISCO-08) and Sri Lanka Standard Industrial Classification 4 (SLSIC 4, corresponding to ISIC Rev.4) which will be discussed in the following section.
-<br>
-<ins>2019-2021</ins> Digital literacy was added, and employers and account owners were separated as a single category when asking income questions.
+### Changes in ICLS version and the impact on results  
 
 
 ### Coding of industry and occupation codes
@@ -89,43 +68,18 @@ In terms of classifications of industry and occupation, we only have definite in
 For 2013-2021, we harmonized both industry and occupation at 4-digit level. Detailed corresponding tables and mapping process are in this [separate document](Correspondence_National_International_Classifications.md) . 
 
 
-### Regional exclusion of Northern and Eastern Provinces
-
-Conflict in Sri Lankan from 1989 to 2009, the majority of which occurred in the north of the island, obstructed survey conduction from 1992 to 2008 in the Northern and Eastern Provinces. All years before 2011 do exclude the Northern Province. Years 2003 and 2008 managed to survey the Eastern Province. And all years since 2011 cover the total 25 districts from 7 provinces.
-
-Below is a screenshot from the 2001 annual report explaining the change in the geographical coverage.
+### Migrated from other countries
 
 
-![explanation](utilities/2011_report_northern_and_eastern.png)
+
+### Age variables in 2021 and 2022
 
 
-### Urban/rural definition
 
-The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book.pdf), the latest statistics such as ILO and WDI (as well as some years in our harmonization) which indicate about 18% of urban population could fail to reflect the true level of urbanization in the country, due to the static definition. 
-
-As argued by the author, the urban sector was defined only by administration. Until 1987, Municipal Councils (MCs), Urban Councils (UCs) and Town Councils (TCs) comprised the urban sector. Meanwhile, rural and estate sectors were governed by the Pradesheeya Sabha (PS). After the enactment of the 13th Amendament in 1987, administrative units were recalibrated and TCs were abolished and merged in to PS. This change significantly cut urban population and increased rural population simultaneously. The urban population was estimated above 20% but it dropped to 13.1% in 2001 mainly because 89 settlements previously defined as urban were classified as rural. Based on the author's dynamic definition refined by population, population density, firewood and well water dependence, about 43.8% of total population are in urban areas. 
-
-![figure1](utilities/urban_rural_definition.png)
-
-Our harmonized data show discontinuity between 1995 and 1996, indicating a change in the definition used in the survey. Note further that the estimates obtained for years before 1995 are much higher than expected, even if an older definition were used. When using the data, kindly be advised to caution the inconsistent urban rural distribution and the definition applied.   
-
-![figure2](utilities/urban_rural_change.png)
+### Educational categories
 
 
-### Duplicates in early years 
-
-In several early years such as 1993-1996 and 2002-2008, coding household and individual identification using the original survey ID information such as province, block, household number and personal serial number produces duplicates. Below are two examples from the year 1994 and 2008 respectively. 
-
-| **Example 1994**	| **Example 2008**	|
-| :------:	| :-------:		|
-| ![1994](utilities/duplicates_1994.png) | ![2008](utilities/duplicates_2008.png)|
-
-However, they are two different cases. Regarding 1994, the duplicates are caused by assigning different household members one identical household member number by mistake. Essentially, people with the same unique personal IDs are different individuals. To solve this, we ordered people in descending order of their age within each household and assign new individual (in household) ID numbers. These can be used as their individual identifier.
-
-In the case of 2008, not all duplicates are caused by the duplicated household member number assignment. Before harmonizing, we run a `duplicates report _all` test for all years to make sure that the raw data sets are free of duplicates in terms of all variables. 2008 has 52 observations of which 26 are duplicated once. So before harmonizing, we dropped the 26 surpluses. After dropping the surpluses, as shown in the example, there are still duplicates but these are the ones caused by household member number assignment mistake. And then we repeat the process stated above for 1994  
-
-
-### Labour force participation and employment statistics comparison with LKA national annual reports
+### Employment rate comparison
 
 In addition to GLD routine quality checks, we also cross checked with each year's annual report to tap into the rich and comprehensive statistics provided in most of the years. The complete comparison results are in this [excel workbook](utilities/LKA_employment_stats_comparison.xlsx). Below only shows the labour force participation rate comparison, which indicates the closeness of our harmonized results and the official estimates. 
 
